Problems :  1) Display overflow menu on main Screen - fixed  2) ViewPager Screens disappear - fixed  3) Hide the App Bar on Welcome Screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,8 @@
     <string name="empty_audio_store_message">There are no Audio evidences recorded.</string>
 
 
-
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
