Problems :  1) Display overflow menu on main Screen - fixed  2) ViewPager Screens disappear - fixed  3) Hide the App Bar on Welcome Screen.  4) User Details preference Screen to activity navigation problem.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="action_settings">Settings</string>
 
 
-    <!--Welcome screen text strings-->
+    <!-- ************************************ Welcome screen text strings ************************************************************************************** -->
+
     <string name="greetings_string_initializing" translatable="true">Hi there,</string>
     <string name="welcome_string_initializing" translatable="true">We\'re very happy to be with you in the impromptu situations and we\'re committed to make it
     as easy as possible to help you acquire as much evidence as possible</string>
@@ -20,13 +21,13 @@
     <string name="welcome_screen_text_anim_duration">3000</string>
     <string name="fragment_change_duration">5000</string>
 
-    <!--Main Screen Strings-->
+    <!-- ****************************************************** Main Screen Strings ***************************************************************************** -->
 
     <!-- Number of Main Screen View Pager Tabs -->
     <string name="pager_tabs">2</string>
 
 
-    <!-- ImagesFragmentOfViewPager class Strings-->
+    <!-- ************************************************** ImagesFragmentOfViewPager class Strings **************************************************************** -->
 
     <!--Message displayed when there are no images recorded in the store-->
     <string name="empty_image_store_message">There are no Image evidences captured.</string>
@@ -38,6 +39,176 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <!-- ********************************************** Settings Activity related Strings ************************************************************************-->
     <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- "Set Timer" setting strings -->
+
+    <string name="set_timer_header">Set Timer</string>
+    <string name="set_timer_key" translatable="false">Timer_Key</string>
+
+    <string name="set_timer_summary_string" translatable="true">The timer allows the app to run in the background and keep capturing images and audio evidences
+        for a specified time frame.</string>
+
+    <!-- (((((((((((((((((((((((((((((((((((((((((( "Set Timer" value strings.))))))))))))))))))))))))))))))))))))))))))))))))))))))))) -->
+    <string name="set_timer_1_minute" translatable="true">1 minute</string>
+    <string name="set_timer_2_minutes" translatable="true">2 minutes</string>
+    <string name="set_timer_3_minutes" translatable="true">3 minutes (default)</string>
+    <string name="set_timer_5_minutes" translatable="true">5 minutes</string>
+
+    <array name="timer_strings_for_users"> <!-- These strings are visible to the users in their language. -->
+        <item>@string/set_timer_1_minute</item>
+        <item>@string/set_timer_2_minutes</item>
+        <item>@string/set_timer_3_minutes</item>
+        <item>@string/set_timer_5_minutes</item>
+    </array>
+
+    <string name="set_timer_1_minute_system" translatable="false">1 minute</string>
+    <string name="set_timer_2_minutes_system" translatable="false">2 minutes</string>
+    <string name="set_timer_3_minutes_system" translatable="false">3 minutes (default)</string>
+    <string name="set_timer_5_minutes_system" translatable="false">5 minutes</string>
+
+
+    <array name="timer_values"> <!-- These are the equivalent strings visible to the user and are used by the system. -->
+        <item>@string/set_timer_1_minute_system</item>
+        <item>@string/set_timer_2_minutes_system</item>
+        <item>@string/set_timer_3_minutes_system</item>
+        <item>@string/set_timer_5_minutes_system</item>
+    </array>
+
+    <!-- (((((((((((((((((((((((((((((((((((((((((( Done with "Set Timer" value strings ))))))))))))))))))))))))))))))))))))))))))))))))))))))))) -->
+
+    <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+
+    <!-- (((((((((((((((((((((((((((((((((((((((((( "Set Trigger" value strings ))))))))))))))))))))))))))))))))))))))))))))))))))))))))) -->
+
+    <!--"Set Trigger" setting Strings-->
+    <string name="set_trigger_header" translatable="true">Set Trigger</string>
+    <string name="set_trigger_summary" translatable="true">Choose a trigger which is convenient to you to start the recoding process in stealth mode</string>
+
+    <string name="set_trigger_key" translatable="false">Trigger_Key</string>
+
+    <string name="set_trigger_as_power_button_3_taps" translatable="true">Power Button (3 taps)</string>
+    <string name="set_trigger_as_home_button_3_taps" translatable="true">Home Button (3taps)</string>
+    <string name="set_trigger_as_proximity_sensor_3_taps" translatable="true">Proximity Sensor (3 times in 5 sec)</string>
+
+    <array name="set_trigger_strings_for_users"> <!-- These strings are visible to the users in their language. -->
+        <item>@string/set_trigger_as_power_button_3_taps</item>
+        <item>@string/set_trigger_as_home_button_3_taps</item>
+        <item>@string/set_trigger_as_proximity_sensor_3_taps</item>
+    </array>
+
+    <string name="set_trigger_as_power_button_3_taps_system" translatable="false">Power Button (3 taps)</string>
+    <string name="set_trigger_as_home_button_3_taps_system" translatable="false">Home Button (3taps)</string>
+    <string name="set_trigger_as_proximity_sensor_3_taps_system" translatable="false">Proximity Sensor (3 times in 5 sec)</string>
+
+    <array name="set_trigger_strings_for_users_system"> <!-- These are the equivalent strings visible to the user and are used by the system. -->
+        <item>@string/set_trigger_as_power_button_3_taps_system</item>
+        <item>@string/set_trigger_as_home_button_3_taps_system</item>
+        <item>@string/set_trigger_as_proximity_sensor_3_taps_system</item>
+    </array>
+
+    <!-- (((((((((((((((((((((((((((((((((((((((((( Done with "Set Trigger" value strings ))))))))))))))))))))))))))))))))))))))))))))))))))))))))) -->
+
+    <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+
+    <!-- (((((((((((((((((((((((((((((((((((((((((( "User Details" value strings ))))))))))))))))))))))))))))))))))))))))))))))))))))))))) -->
+
+    <string name="user_details_header">User Details</string>
+    <string name="user_details_summary">User details are generally synced from your Google account and can also be modified.</string>
+    <string name="user_details_key">User_Details_Key</string>
+
+    <string name="user_details_screen_title">User Details</string>
+    <string name="large_text">
+        "Material is the metaphor.\n\n"
+
+        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
+        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
+        "technologically advanced and open to imagination and magic.\n"
+        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
+        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
+        "flexibility of the material creates new affordances that supercede those in the physical "
+        "world, without breaking the rules of physics.\n"
+        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
+        "interact, and exist in space and in relation to each other. Realistic lighting shows "
+        "seams, divides space, and indicates moving parts.\n\n"
+
+        "Bold, graphic, intentional.\n\n"
+
+        "The foundational elements of print based design typography, grids, space, scale, color, "
+        "and use of imagery guide visual treatments. These elements do far more than please the "
+        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
+        "imagery, large scale typography, and intentional white space create a bold and graphic "
+        "interface that immerse the user in the experience.\n"
+        "An emphasis on user actions makes core functionality immediately apparent and provides "
+        "waypoints for the user.\n\n"
+
+        "Motion provides meaning.\n\n"
+
+        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
+        "inflection points that initiate motion, transforming the whole design.\n"
+        "All action takes place in a single environment. Objects are presented to the user without "
+        "breaking the continuity of experience even as they transform and reorganize.\n"
+        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
+        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
+
+        "3D world.\n\n"
+
+        "The material environment is a 3D space, which means all objects have x, y, and z "
+        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
+        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
+        "position along the z-axis and has a standard 1dp thickness.\n"
+        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
+        "emulated by manipulating the y-axis.\n\n"
+
+        "Light and shadow.\n\n"
+
+        "Within the material environment, virtual lights illuminate the scene. Key lights create "
+        "directional shadows, while ambient light creates soft shadows from all angles.\n"
+        "Shadows in the material environment are cast by these two light sources. In Android "
+        "development, shadows occur when light sources are blocked by sheets of material at "
+        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
+        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
+
+        "Resting elevation.\n\n"
+
+        "All material objects, regardless of size, have a resting elevation, or default elevation "
+        "that does not change. If an object changes elevation, it should return to its resting "
+        "elevation as soon as possible.\n\n"
+
+        "Component elevations.\n\n"
+
+        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
+        "does not vary from 6dp in one app to 16dp in another app).\n"
+        "Components may have different resting elevations across platforms, depending on the depth "
+        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
+
+        "Responsive elevation and dynamic elevation offsets.\n\n"
+
+        "Some component types have responsive elevation, meaning they change elevation in response "
+        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
+        "changes are consistently implemented using dynamic elevation offsets.\n"
+        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
+        "to the component’s resting state. They ensure that elevation changes are consistent "
+        "across actions and component types. For example, all components that lift on press have "
+        "the same elevation change relative to their resting elevation.\n"
+        "Once the input event is completed or cancelled, the component will return to its resting "
+        "elevation.\n\n"
+
+        "Avoiding elevation interference.\n\n"
+
+        "Components with responsive elevations may encounter other components as they move between "
+        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
+        "through other material, components avoid interfering with one another any number of ways, "
+        "whether on a per component basis or using the entire app layout.\n"
+        "On a component level, components can move or be removed before they cause interference. "
+        "For example, a floating action button (FAB) can disappear or move off screen before a "
+        "user picks up a card, or it can move if a snackbar appears.\n"
+        "On the layout level, design your app layout to minimize opportunities for interference. "
+        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
+        "when a user tries to pick up one of cards.\n\n"
+    </string>
 
 </resources>
